--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -1,7 +1,7 @@
 html {
   font-family: 'Righteous';
   color: rgb(230,188,76);
-  box-shadow: inset 0 0 0  1000px rgba(0,16,0,.7);
+  box-shadow: inset 0 0 0 1000px rgba(0,16,0,.7);
 }
 
 body {
@@ -33,8 +33,8 @@ h3 {
   margin-left: 0px;
   margin-right: 0px;
   top: 0;
-  background: rgba(220,220,220,0.6);
-  backdrop-filter: blur(20px);
+  background: rgba(0,0,0,0.4);
+  backdrop-filter: blur(10px);
 
 
 }
@@ -51,7 +51,7 @@ h3 {
 
 .stinkyButtons {
   size: 4em;
-  color: black;
+  color: white;
   border: none;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
@@ -65,5 +65,6 @@ h3 {
 }
 
  .stinkyButtons:hover {
-  background-color: rgba(0,0,70,0.1);
+  background-color: rgba(255,255,255,0.4);
+  color: black;
 }
